--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <label for="menu-icon"></label>
       <nav class="nav"> 		
         <ul class="pt-5">
-          <li><a href="index.php">الصفحة الرئيسية</a></li>
-          <li><a href="Questions.php">الأسئلة</a></li>
+          <li><a href="index.html">الصفحة الرئيسية</a></li>
+          <li><a href="Questions.html">الأسئلة</a></li>
           <li><a href="#">الألعاب</a></li>
           <li><a href="#">الإختبار</a></li>
         </ul>
