--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </nav>
   
     <div class="div1">
-    <button class="uiverse"  onclick="window.location.href='Login.php';">
+    <button class="uiverse"  onclick="window.location.href='Login.html';">
   <div class="wrapper">
     <span>تسجيل الدخول</span>
     <div class="circle circle-12"></div>
