--- a/Questions.html
+++ b/Questions.html
@@ -9,8 +9,8 @@
 <body class="main-menu">
     <div class="container">
         <h1>اختر نوع الأسئلة</h1>
-        <div onclick="location.href='Questions2.php?type=theory'" class="image-wrapper"> اسئلة نظري</div>
-        <div onclick="location.href='Questions2.php?type=practical'" class="image-wrapper2">اسئلة عملي</div>
+        <div onclick="location.href='Questions2.html?type=theory'" class="image-wrapper"> اسئلة نظري</div>
+        <div onclick="location.href='Questions2.html?type=practical'" class="image-wrapper2">اسئلة عملي</div>
     </div>
 </body>
 </html>
